--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
@@ -23,6 +25,7 @@
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   }
 }
